@@ -32,6 +32,8 @@ argsfile    ./test-db/slapd.m.args
 #metamod#moduleload back_meta.la
 #monitormod#modulepath ../servers/slapd/back-monitor/
 #monitormod#moduleload back_monitor.la
+#gluemod#modulepath ../servers/slapd/overlays/
+#gluemod#moduleload glue.la
 #rwmmod#modulepath ../servers/slapd/overlays/
 #rwmmod#moduleload rwm.la
 
